<?xml version="1.0" encoding="utf-8"?>

<!--

strings.xml in FtcRobotController

Copyright (c) 2014, 2015 Qualcomm Technologies Inc

All rights reserved.

Redistribution and use in source and binary forms, with or without modification,
are permitted (subject to the limitations in the disclaimer below) provided that
the following conditions are met:

Redistributions of source code must retain the above copyright notice, this list
of conditions and the following disclaimer.

Redistributions in binary form must reproduce the above copyright notice, this
list of conditions and the following disclaimer in the documentation and/or
other materials provided with the distribution.

Neither the name of Qualcomm Technologies Inc nor the names of its contributors
may be used to endorse or promote products derived from this software without
specific prior written permission.

NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS
LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
"AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->

<resources>

    <string name="app_name">FTC Robot Controller</string>

    <!-- Menu -->
    <string name="inspection_mode_menu_item">Self Inspect</string>
    <string name="programming_mode_menu_item">Programming Mode</string>
    <string name="program_and_manage_menu_item">Program &amp; Manage</string>
    <string name="blocks_menu_item">Blocks</string>
    <string name="settings_menu_item">Settings</string>
    <string name="restart_robot_menu_item">Restart Robot</string>
    <string name="configure_robot_menu_item">Configure Robot</string>
    <string name="about_menu_item">About</string>
    <string name="exit_menu_item">Exit</string>

    <!-- Toast messages -->
    <string name="toastWifiConfigurationComplete">Configuration Complete</string>
    <string name="toastRestartingRobot">Restarting Robot</string>
    <string name="toastConfigureRobotBeforeProgrammingMode">You must Configure Robot before starting Programming Mode.</string>

    <!-- for interpreting pref_app_theme contents. may be override in merged resources -->
    <integer-array name="app_theme_ids">
        <item>@style/AppThemeRedRC</item>
        <item>@style/AppThemeGreenRC</item>
        <item>@style/AppThemeBlueRC</item>
        <item>@style/AppThemePurpleRC</item>
        <item>@style/AppThemeOrangeRC</item>
        <item>@style/AppThemeTealRC</item>
    </integer-array>

    <string name="packageName">@string/packageNameRobotController</string>
    <string name="title_activity_cybots_menu">CybotsMenu</string>
    <string name="auto_testing_mode">Auto Testing Mode</string>
    <string name="field_image">Field Image</string>
    <string name="red_1">RED 1</string>
    <string name="blue_1">BLUE 1</string>
    <string name="red_2">RED 2</string>
    <string name="blue_2">BLUE 2</string>
    <string name="robot_options">Robot Options</string>
    <string name="select_autonomous_below">Select autonomous below</string>
    <string name="save">SAVE</string>
    <string name="title_activity_config_options">ConfigOptions</string>
    <string name="set_position">Set Position</string>

</resources>
