<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qualcomm.ftcrobotcontroller.ConfigOptions">

    <Switch
        android:id="@+id/testModeSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/auto_testing_mode"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="386dp"
        android:layout_height="378dp"
        android:contentDescription="@string/field_image"
        android:src="@drawable/field"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/red_close"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="293dp"
        android:layout_marginTop="287dp"
        android:text="@string/red_1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/selectionView" />

    <Button
        android:id="@+id/blue_close"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="295dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="287dp"
        android:text="@string/blue_1"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/selectionView" />

    <Button
        android:id="@+id/red_far"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="215dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="293dp"
        android:layout_marginTop="93dp"
        android:text="@string/red_2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/blue_far"
        android:layout_width="73dp"
        android:layout_height="67dp"
        android:layout_marginBottom="215dp"
        android:layout_marginEnd="295dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="93dp"
        android:text="@string/blue_2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/selectionView"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="10dp"
        android:text="@string/select_autonomous_below"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
